--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "date-fns": "^4.1.0",
+    "moment": "^2.30.1",
     "react": "^19.2.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.1"
   },
